...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Contacts-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="ContactListViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="ContactListViewController" customModule="Contacts" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="POO-Q4-IEM">
                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
...
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Contacts" id="4bq-as-cWr">
                        <barButtonItem key="leftBarButtonItem" title="Groups" id="8oV-nL-Paf">
                            <color key="tintColor" red="0.31372549020000001" green="0.89019607840000003" blue="0.76078431369999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Item" image="plusButton" id="Cqq-jT-OxG">
                            <color key="tintColor" red="0.31372549019607843" green="0.8901960784313725" blue="0.76078431372549016" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <connections>
                                <action selector="addButtonAction:" destination="BYZ-38-t0r" id="1L7-Gm-k2Z"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KVI-br-uit">
                                                        <rect key="frame" x="246" y="177" width="41" height="41"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" constant="41" id="3wQ-VH-hy0"/>
                                                            <constraint firstAttribute="height" constant="41" id="X0s-Qv-mSs"/>
                                                        </constraints>
                                                        <state key="normal" image="CameraButton"/>
                                                        <connections>
                                                            <action selector="cameraButtonTapped:" destination="56c-0U-W4g" eventType="touchUpInside" id="Fh6-z5-lc3"/>
                                                        </connections>
                                                    </button>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Robert" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lvx-Su-Zbu">
                                                        <rect key="frame" x="176" y="226" width="62.5" height="30"/>
...
